--- a/ng-demo/app/map/map.html
+++ b/ng-demo/app/map/map.html
@@ -5,5 +5,6 @@
              (markerSelect)="onMarkerEvent($event)" (markerBeginDragging)="onMarkerEvent($event)"
              (markerEndDragging)="onMarkerEvent($event)" (markerDrag)="onMarkerEvent($event)"
              (markerInfoWindowTapped)="onMarkerEvent($event)" (coordinateTapped)="onCoordinateTapped($event)"
-             (cameraChanged)="onCameraChanged($event)"></MapView>
+             (cameraChanged)="onCameraChanged($event)"
+             (cameraMove)="onCameraMove($event)"></MapView>
 </GridLayout>
